--- a/index.html
+++ b/index.html
@@ -574,9 +574,9 @@
       <div class="col-lg-6">
         <h4>Get in Touch</h4>
         <ul class="list-unstyled">
-          <li class="mb-3"><i class="fas fa-phone-alt me-2"></i> <strong>Phone:</strong> +123-456-7890</li>
+          <li class="mb-3"><i class="fas fa-phone-alt me-2"></i> <strong>Phone:</strong> +27671804862</li>
           <li class="mb-3"><i class="fas fa-envelope me-2"></i> <strong>Email:</strong> contact@agrotechsolutions.com</li>
-          <li class="mb-3"><i class="fas fa-map-marker-alt me-2"></i> <strong>Address:</strong> 123 AgroTech Avenue, Greenfield City</li>
+          <li class="mb-3"><i class="fas fa-map-marker-alt me-2"></i> <strong>Address:</strong> 153 AgroTech Avenue, Fourways</li>
         </ul>
        
       </div>
