--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AgroTech Solutions</title>
+    <title>FarmEdu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome CDN -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
    
   <nav class="navbar navbar-expand-lg navbar-light ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">AgroTech Solutions</a>
+      <a class="navbar-brand" href="#">FarmEdu</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -488,25 +488,25 @@
             <div class="article-card p-3 mb-3">
               <h4>Article 1: Climate Smart Farming Practices</h4>
               <p>Explore farming techniques that can help mitigate the effects of climate change.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
+              <a href="https://eos.com/blog/climate-smart-agriculture/" class="btn btn-outline-primary" target="_blank">Read More</a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="article-card p-3 mb-3">
               <h4>Article 2: Efficient Water Usage for Irrigation</h4>
               <p>Learn how to conserve water and improve irrigation efficiency.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
+              <a href="https://www.scielo.org.za/scielo.php?script=sci_arttext&pid=S1816-79502011000500017" class="btn btn-outline-primary" target="_blank">Read More</a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="article-card p-3 mb-3">
               <h4>Article 3: Protecting Your Crops from Pests</h4>
               <p>Discover organic and chemical methods for keeping pests away from your crops.</p>
-              <a href="#" class="btn btn-outline-primary">Read More</a>
+              <a href="https://byjus.com/biology/crop-protection/" class="btn btn-outline-primary" target="_blank">Read More</a>
             </div>
           </div>
         </div>
-        <a href="#" class="btn-1">View All Articles</a>
+        <a href="#" class="btn-1" target="_blank">View All Articles</a>
       </div>
     </div>
 
@@ -575,8 +575,8 @@
         <h4>Get in Touch</h4>
         <ul class="list-unstyled">
           <li class="mb-3"><i class="fas fa-phone-alt me-2"></i> <strong>Phone:</strong> +27671804862</li>
-          <li class="mb-3"><i class="fas fa-envelope me-2"></i> <strong>Email:</strong> contact@agrotechsolutions.com</li>
-          <li class="mb-3"><i class="fas fa-map-marker-alt me-2"></i> <strong>Address:</strong> 153 AgroTech Avenue, Fourways</li>
+          <li class="mb-3"><i class="fas fa-envelope me-2"></i> <strong>Email:</strong> contact@farmedu.com</li>
+          <li class="mb-3"><i class="fas fa-map-marker-alt me-2"></i> <strong>Address:</strong> 153 Malvin Avenue, Fourways</li>
         </ul>
        
       </div>
@@ -587,7 +587,7 @@
     <!-- Footer Section -->
     <footer class=" text-white py-4">
         <div class="container">
-            <p class="text-center">© 2024 AgroTech Solutions - is dedicated to empowering farmers with innovative, sustainable, and data-driven agricultural solutions. We bridge the gap between technology and traditional farming, helping farmers increase productivity and promote eco-friendly practices</p>
+            <p class="text-center">© 2024 FarmEdu - is dedicated to empowering farmers with innovative, sustainable, and data-driven agricultural solutions. We bridge the gap between technology and traditional farming, helping farmers increase productivity and promote eco-friendly practices</p>
         </div>
 
 
