--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-light ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="images/FarmEdu_logo.png" alt="Logo" width="45" height="45" class="d-inline-block align-text-top">
+        <img src="images/FarmEdu_logo.png" alt="Logo" width="55" height="45" class="d-inline-block align-text-top">
         Farm<span>Edu</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -568,7 +568,7 @@
             <label for="message" class="form-label">Message</label>
             <textarea class="form-control" id="message" rows="5"   name="message"  placeholder="Your Message"></textarea>
           </div>
-          <button type="submit" class="btn btn-success w-100">Send Message</button> <!-- Full width button for smaller screens -->
+          <button type="submit" class="btn-1 w-100">Send Message</button> <!-- Full width button for smaller screens -->
         </form>
         <p id="form-status" class="mt-3"></p>
       </div>
